--- a/src/components/components Css/List.css
+++ b/src/components/components Css/List.css
@@ -83,3 +83,37 @@
     height: 30px;
     line-height: 30px;
 }
+
+.listHead {
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 60%;
+    align-self: center;
+
+}
+
+.list-input {
+    resize: none;
+    width: 40%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 300;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    transition: 150ms;
+}
+
+
+.list-input:focus {
+    outline: none;
+    background-color: rgb(245, 245, 245);
+    transform: scale(1.03)
+}
+
+.save-btn-list {
+    justify-self: center;
+}
