--- a/src/layouts/css/NavMain.css
+++ b/src/layouts/css/NavMain.css
@@ -22,9 +22,10 @@
 .nav-user {
     /*border: 1px solid black;*/
     height: 30px;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     font-size: 1.5rem;
     margin-bottom: 10px;
 
@@ -32,12 +33,13 @@
 
 .nav-user {
     margin-top: 20px;
+    justify-content: flex-start
 }
 
 .btn-rec {
     width: 40px;
     height: 40px;
-    font-size: 3.6rem;
+    font-size: 1.8rem;
     font-weight: 100;
     line-height: 40px;
     background-color: transparent;
@@ -46,4 +48,18 @@
     border-radius: 3px;
     align-self: center;
     cursor: pointer;
+}
+
+.btn-rec.btn-rec-small {
+    width: 20px;
+    height: 20px;
+    line-height: 1;
+    margin-left: 20px;
+}
+
+.avatar-thumbnail {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 30px;
 }
